Bio-link update, responsivity

--- a/bio-link.html
+++ b/bio-link.html
@@ -10,11 +10,11 @@
 <body>
 
 <header class="header">
-  <a href="" id="navLogo">Klimondra</a>
+  <a href="index.html" id="navLogo">Klimondra</a>
 
   <nav class="navbar">
-    <a id="navWhoBtn">Kdo jsem</a>
-    <a id="navFlwBtn">Sociální sítě</a>
+    <a id="navWhoBtn" href="index.html#aboutme">Kdo jsem</a>
+    <a id="navFlwBtn" href="index.html#followme">Sociální sítě</a>
   </nav>
 
   <div class="menu-icon" id="menuIcon">
