--- a/bio-link.html
+++ b/bio-link.html
@@ -15,6 +15,7 @@
   <nav class="navbar">
     <a id="navWhoBtn" href="index.html#aboutme">Kdo jsem</a>
     <a id="navFlwBtn" href="index.html#followme">Sociální sítě</a>
+    <a id="navBioBtn" href="bio-link.html">Linktree</a>
   </nav>
 
   <div class="menu-icon" id="menuIcon">
