--- a/bio-link.html
+++ b/bio-link.html
@@ -131,6 +131,8 @@
     </a>
   </div>
 </section>
-
+<section class="footer">
+  <h4 class="footertext">Vyvtořil Klimondra s HTML & CSS & <i class="fa-solid fa-heart"></i> v roce 2024</h4>
+</section>
 </body>
 </html>
