Přidání odkazu do Linktree
Took 4 minutes

--- a/bio-link.html
+++ b/bio-link.html
@@ -105,6 +105,11 @@
       <i class="fa-solid fa-brands2 fa-question"></i>
       <p>NGL - Anonymní otázky</p>
     </a>
+    </a>
+    <a href="https://site21059121.nicepage.io/" class="bioitem">
+      <i class="fa-brands fa-brands2 fa-twitch"></i>
+      <p>Fiktivní firma Q3D</p>
+    </a>
     <a href="https://www.instagram.com/klimondra/" class="bioitem">
       <i class="fa-brands fa-brands2 fa-instagram"></i>
       <p>Instagram</p>
