Přidání odkazu do Linktree - ikona
Took 1 minute

--- a/bio-link.html
+++ b/bio-link.html
@@ -107,7 +107,7 @@
     </a>
     </a>
     <a href="https://site21059121.nicepage.io/" class="bioitem">
-      <i class="fa-brands fa-brands2 fa-twitch"></i>
+      <i class="fa-solid fa-brands2 fa-building"></i>
       <p>Fiktivní firma Q3D</p>
     </a>
     <a href="https://www.instagram.com/klimondra/" class="bioitem">
