--- a/bio-link.html
+++ b/bio-link.html
@@ -70,7 +70,7 @@
   </div>
 </section>
 <section class="footer">
-  <h4 class="footertext">Vyvtořil Klimondra s HTML & SsCSS & <i class="fa-solid fa-heart"></i> v roce 2024</h4>
+  <h4 class="footertext">Vyvtořil Klimondra s HTML & SCSS & <i class="fa-solid fa-heart"></i> v roce 2024</h4>
 </section>
 </body>
 </html>
