--- a/bio-link.html
+++ b/bio-link.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Klimondra</title>
+  <link rel="icon" href="images/K-logo.png">
   <link rel="stylesheet" href="mainStyles.css">
   <link rel="stylesheet" href="otherAssets/fontawesome-free-icons/css/brands.css">
   <link rel="stylesheet" href="otherAssets/fontawesome-free-icons/css/solid.css">
