--- a/bio-link.html
+++ b/bio-link.html
@@ -53,16 +53,17 @@
       <i class="fa-brands fa-brands2 fa-threads"></i>
       <p>Threads</p>
     </a>
+    <a href="https://github.com/Klimondra" class="bioitem">
+    <i class="fa-brands fa-brands2 fa-github"></i>
+    <p>Github</p>
+    </a>
+    <a href="https://www.printables.com/@Klimondra_2716743" class="bioitem">
+      <img src="/otherAssets/myIcons/printables-white.svg" alt="Printable Icon" class="fa-brands2" width="38px" />
+      <p>Printables</p>
     </a>
     <a href="https://www.tiktok.com/@klimondracz" class="bioitem">
       <i class="fa-brands fa-brands2 fa-tiktok"></i>
       <p>Tiktok</p>
-    </a>
-    </a>
-    <a href="https://github.com/Klimondra" class="bioitem">
-      <i class="fa-brands fa-brands2 fa-github"></i>
-      <p>Github</p>
-    </a>
     </a>
     <a href="https://www.twitch.tv/klimondra" class="bioitem">
       <i class="fa-brands fa-brands2 fa-twitch"></i>
